app-manifests/app-simple-canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-ms-canary
  labels:
    app: demo-ms-canary
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-ms-canary
  template:
    metadata:
      labels:
        app: demo-ms-canary
    spec:
      containers:
      - image: paulofponciano/demo-ms-intercomunicacao:latest
        name: demo-container-app
        ports:
        - containerPort: 5000
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {duration: 30s}
        - setWeight: 40
        - pause: {duration: 30s}
        - setWeight: 60
        - pause: {duration: 30s}
        - setWeight: 80
        - pause: {duration: 30s}
      canaryService: demo-ms-canary
      stableService: demo-ms-stable
---
apiVersion: v1
kind: Service
metadata:
  name: demo-ms-stable
spec:
  selector:
    app: demo-ms-canary
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: demo-ms-canary
spec:
  selector:
    app: demo-ms-canary
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
