app-manifests/app-simple-canary/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: demo-ms-canary-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - demo-ms-canary.paulofponciano.dev
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
